--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.2.0",
+    "@material-ui/core": "4.2.0",
     "material-table": "^1.40.1",
     "material-ui-treeview": "^3.3.0",
     "react": "^16.8.6",
