--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.2.0",
+    "crypto-js": "^3.1.9-1",
     "material-table": "^1.40.1",
     "material-ui-treeview": "^3.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-notifications-component": "^1.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "sweetalert-react": "^0.4.11"
   },
   "scripts": {
     "start": "react-scripts start",
